# AstroCapture

./: .gitmodules  AboutWindow.hpp  Acknowledgments.hpp  AcqusitionHandler.hpp  CMakeLists.txt  CameraWindow.hpp  FileDialog.hpp  HyperlinkHelper.hpp  Plots.hpp  ProcessInfo.cpp  Readme.adoc  Readme.md  SERProcessor.hpp  SystemInformation.cpp  SystemInformation.hpp  ViewPort.hpp  asi_base.hpp  asi_ccd.hpp  asi_helpers.hpp  camera_base.hpp  circular_buffer.hpp  inspector.hpp  main.cpp  timer.hpp
cmake_module/: InstallImported.cmake
